docs(guardrail): 安全专项收口——G1/G2 转用户自执行定案 + 16/18 章回写补齐 + CLAUDE.md 瘦身
- 用户定案：G1 红队首跑与 G2 带外扩词转用户侧自行执行，专项不再排期
  （机器侧就绪状态不变：tools/redteam/ 通道 + 覆盖复算探针 + 基线锚点 47/13/9/58）
- 收口审计通过：E1-E8 缺口台账 / 安全簇①-⑥ / 12.4 S1-S8 与 G1-G4 全部消化，
  缓做项全部登记在册（B5 漏洞治理/簇④探针校准/Plan C 触发条件/eval L2 复跑等）
- 审计发现两处设计回写遗漏并同日补齐：
  - 16 章 v2.25：三分区门禁契约 + L1+L2 联合力判链与双读数 + 语料 127/Golden 237
    + 干净集 BLOCK+FLAG 全档零命中口径 + 间接注入抑制率口径
  - 18 章 v1.1：验收项 9 钉死防域子集语义（L1 防域 ≥95% + L2 防域 ≥90% 双读数）
    + 项 10 PII 覆盖类型数更新为七类识别器
  - 12.4.1 G1-G3 补消费闭环标记（G4 原有）
- CLAUDE.md 瘦身 23.5KB → 19.99KB（≤20KB 纪律达标）：
  实证坑 ①-㉜ 全量迁 19 章附录 E 台账（正文留高频坑位 + 指针），
  压缩过程叙述保留架构事实；修正 Golden 计数（237=干净110+注入127）、
  流式 trace 残余归属明确为 Phase 4 簇⑥、/admin 四 Tab → 五 Tab
- 进度文档：08-19 收口审计状态行 + 安全⑥任务行追加定案

Co-Authored-By: Claude <noreply@anthropic.com>